mule-user-guide/v/3.3/3-deploying-an-application.adoc
= Deploying an Application

With a Mule cluster up and running, we can deploy an application to run on the cluster. The *Mule HA Demo Bundle* includes a *cluster-demo-app* that we shall deploy to a cluster.

. On the Management Console, click the *Applications* tab, then click *New*.
+
image::/docs/download/attachments/87687473/applicationTab_new.png?version=1&modificationDate=1349718346615[image]

. In the *Deployment Name* field, enter a unique name for the deployment, such as `Demo App 456`.
. Click the *Upload New Application* button.
. In the pop-up dialog (see image below, top) click *Browse*, then navigate to `mule-ha-bundle-3.3.1 > apps > cluster-demo-app.zip`. Select the `.zip` file, then click *Add* to upload the application to the Management Console (see image below, bottom).
+
image::/docs/download/attachments/87687473/add_new_mule_app.png?version=1&modificationDate=1349718346560[image,align="center"]
+
image::/docs/download/attachments/87687473/added_app.png?version=1&modificationDate=1349718346580[image,align="center"]

. Use the drop-down under the *Servers* heading to select the cluster that you created.
+
image::/docs/download/attachments/87687473/select_cluster.png?version=1&modificationDate=1349815098370[image]

. Click *Deploy* to launch the *cluster-demo-app* on your cluster. When Mule completes the deployment - this may take a minute - the Management Console displays a message at the top of the tab which reads, `Current Status: Successful`.
+
image::/docs/download/attachments/87687473/current_status_SUCCESSFUL.png?version=1&modificationDate=1349815405174[image]

. Click *Deployment* in the *Package Explorer* column at the left to return to the main screen of the *Applications* tab. The Management Console displays your successfully deployed application, as indicated by the green circle icon.
+
image::/docs/download/attachments/87687473/app_deployed_SUCCESSFUL.png?version=1&modificationDate=1349815296382[image]

[width="99",cols="50,50",frame="none",grid="none"]
|===
>| |link:/docs/display/33X/4+-+Applying+Load+to+the+Cluster[Next: Applying Load to the Cluster]
|===
