mule-user-guide/v/3.5/3-deploying-an-application.adoc
= Deploying an Application
:keywords: deploy, cloud, on premise, on premises, cloudhub, deploying

With a Mule cluster up and running, we can deploy an application to run on the cluster. The *Mule HA Demo Bundle* includes a *cluster-demo-app* that we shall deploy to the cluster.

. On the management console, click the *Deployments* tab, then click *New*.
+
image:deployments.png[deployments]

. In the *Deployment Name* field, enter a unique name for the deployment, such as `Demo App 456`.

. Click the *Upload New Application* button.

. In the pop-up dialogue (see image below, top), click *Browse*, then navigate to `mule-ha-bundle-2.0` > `apps` > `cluster-demo-app.zip`. Select the `.zip` file, then click *Add* to upload the application to the management console (see image below, bottom).
+
image:add_new_mule_app.png[add_new_mule_app]
+
image:added_app.png[added_app]

. Use the drop-down menu under the *Servers* heading to select the cluster that you created.
+
image:select_cluster.png[select_cluster]

. Click *Deploy* to launch the *cluster-demo-app* on your cluster. When Mule completes the deployment — this may take a minute — the management console displays a message at the top of the tab which reads, `Current Status: Successful`.
+
image:current_status_SUCCESSFUL.png[current_status_SUCCESSFUL]

. Click *Deployments* in the *Package Explorer* column at left to return to the main screen of the *Applications* tab. The management console displays your successfully deployed application, as indicated by the green circle icon.
+
image:app_deployed_SUCCESSFUL.png[app_deployed_SUCCESSFUL]
